--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -40,7 +40,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="D:/Kuliah/Semester 5/PPL Agro/Chick-Gu.apk"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -54,8 +54,8 @@ custom_package/release=""
 command_line/extra_args=""
 version/code=1
 version/name="1.0"
-package/unique_name=""
-package/name=""
+package/unique_name="com.chickGu.ppl"
+package/name="Chick-Gu"
 package/signed=true
 screen/immersive_mode=true
 screen/orientation=0
